      - Three above accidentally (Closes: #547951).
      - Report unknown option names in original case. Thanks to Robert Millan.
        (Closes: #548314)
      - ISCConfigParser:
        - Parse \" as " in values. Thanks to Julian Andres Klode.
        - Fixed parsing non-first nested structures. Thanks to
          Oleg Tsybulskyi <alogic0@gmail.com>.
    - Cache:
      - Strip last '/' character from base URI if present. Thanks to Patrick
        Schoenfeld. (Closes: #547953)
      - Parsing preferences: allow spaces between release expressions.
        Thanks to Julian Andres Klode. (Closes: #548051)
      - Speeded up 'Provides' pre-parsing. Reduced 15-25% of overall cache
        build time.
      - SystemState:
        - Speeded up 'Provides' pre-parsing. Reduced 5-10% of overall cache
          build time.
      - Package:
        'new': reduced 10-15% of time spent.
      - BinaryVersion:
        - 'new': fixed reading installed size in bytes.
        - 'new': use internal offsets for working with fields, reduces time
          spent by 20-30%.
        - 'new': verify that architecture is specified.
    - Download:
      - Manager:
        - Added internal check for undefined results from post-action
          subroutines.
      - Progresses/Console:
        - Make sure that guessed terminal width is >= 80 characters.
    - System:
      - Worker:
        - 'update_release_and_index_data': fixed race condition when
          'cupt::update::keep-bad-signatures' is set to false, some release
          signature failed gpg check, and more than one index file is attached
          to corresponding Release.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Tue, 22 Sep 2009 19:12:54 +0300

cupt (1.0.0~beta1) unstable; urgency=low

  * cupt:
    - Fixed the regression since 0.6.0 when reasons are selected to display
      and some reason is an unsatisfied pre-dependency. Thanks to
      Michael Stapelberg.
  * Cupt
    - Cache: